src/css/main.css
:root {
  --max-width: 1280px;
  --min-width: 320px;
  --height-images-services: 300px;
  --accent-color: rgb(232, 99, 10);
  --dark-color: rgb(17, 17, 17);
  --light-color: rgb(221, 217, 217);
  --contrast-dark-color: rgb(252, 217, 0);
  --contrast-dark-color-high-opacity: rgba(252, 217, 0, 0.9);
  --dark-color-high-opacity: rgba(17, 17, 17, 0.9);
  --dark-color-low-opacity: rgba(17, 17, 17, 0.3);
  --color-second: rgb(3, 83, 151);
  --color-second-low-opacity: rgba(3, 83, 151, 0.2);
  --color-first: rgb(0, 30, 108);
}

* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: rgb(19, 19, 19);
  color: var(--dark-color);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

a {
  text-decoration: none;
  color: var(--light-color);
}

/* main */
main {
  height: 100vh;
  display: flex;
  flex-direction: column;
  min-width: var(--min-width);
  background-image: url(../../multimedia/pexels-pixabay-209251.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

header,
article,
footer {
  width: 100%;
  margin: 0 auto;
  padding: 1rem;
  max-width: var(--max-width);
}

.book-appointment {
  background-color: var(--accent-color);
}

/* header */
header {
  position: fixed;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  z-index: 1;
}

.menu-list {
  background-color: var(--color-second-low-opacity);
  backdrop-filter: blur(5px);
  padding: 5px 0 5px 0;
  display: flex;
  flex-direction: row;
  list-style: none;
  gap: 10px;
  text-align: center;
  align-items: center;
}

.logo {
  display: none;
}

.logo img {
  height: 50px;
}

/* footer */
.footer-wrapper {
  background-color: var(--dark-color-high-opacity);
  color: var(--light-color);
}

footer {
  display: flex;
  flex-direction: column;
}

.footer-widget {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 6px;
}

.footer-widget h3 {
  color: var(--accent-color);
  margin: 0 0 1rem 0;
}

.footer-widget p {
  margin: 0 0 1rem 0;
  text-align: end;
}

.footer-widget__phones {
  display: flex;
  flex-direction: column;
}

/* article */
article {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  background-color: var(--dark-color-high-opacity);
}

.claim,
.subclaim {
  color: var(--light-color);
}

/*----->Welcome page<-----*/
#page-welcome {
  margin-top: 60px;
}

/*----------->Services<------------*/
.services {
  text-align: center;
  margin: 20px 0;
  padding: 0;
}

.services-title {
  color: var(--contrast-dark-color);
  margin: 0;
}

.services-subtitle {
  background-color: var(--color-second);
  color: var(--contrast-dark-color);
  margin: 0;
}

.slideButton {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  font-size: 2.5rem;
  cursor: pointer;
  color: var(--accent-color);
}

.prevSlide {
  left: 0.01rem;
}

.nextSlide {
  right: 0.01rem;
}

/*-------------------->PAINTING<-------------------*/
.services-painting {
  position: relative;
}

.services-painting__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/painting/1.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/*-------------------->SOLDERING<-------------------*/
.services-soldering {
  position: relative;
}

.services-soldering__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/soldering/1.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/*-------------------->WATERPROOFING<-------------------*/
.services-waterproofing {
  position: relative;
}

.services-waterproofing__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/waterproofing/1.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/*-------------------->CLEANING<-------------------*/
.services-cleaning {
  position: relative;
}

.services-cleaning__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/cleaning/1.webp);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/*-------------------->DESIGN A<-------------------*/
.services-design-a {
  position: relative;
}

.services-design-a__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/design/a/1.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/*-------------------->DESIGN B<-------------------*/
.services-design-b {
  position: relative;
}

.services-design-b__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/design/b/1.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/*-------------------->DESIGN C<-------------------*/
.services-design-c {
  position: relative;
}

.services-design-c__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/design/c/1.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/*-------------------->DESIGN D<-------------------*/
.services-design-d {
  position: relative;
}

.services-design-d__item {
  height: var(--height-images-services);
  background-image: url(../../multimedia/design/d/1.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transition: background-image 0.7s ease-in-out;
  margin: 10px;
}

/* Responsive stuff */
@media screen and (min-width: 620px) {
  footer {
    flex-direction: row;
    justify-content: space-between;
  }

  .footer-widget {
    flex-direction: column;
  }

  .menu-list {
    gap: 30px;
  }
}

@media screen and (min-width: 800px) {
  footer {
    justify-content: space-around;
    gap: 50px;
  }

  .menu-list {
    gap: 60px;
  }
}

